{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 18,
  "lineage": "8a23dc7f-1022-3426-36d4-e029e5e2a223",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03340e361ad9ec910",
            "arn": "arn:aws:ec2:us-west-2:194722428485:elastic-ip/eipalloc-03340e361ad9ec910",
            "domain": "vpc",
            "id": "eipalloc-03340e361ad9ec910",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-54-218-86-115.us-west-2.compute.amazonaws.com",
            "public_ip": "54.218.86.115",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eks-demo-nat-1"
            },
            "tags_all": {
              "Name": "eks-demo-nat-1"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-077fef23333884464",
            "arn": "arn:aws:ec2:us-west-2:194722428485:elastic-ip/eipalloc-077fef23333884464",
            "domain": "vpc",
            "id": "eipalloc-077fef23333884464",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-54-185-43-93.us-west-2.compute.amazonaws.com",
            "public_ip": "54.185.43.93",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eks-demo-nat-2"
            },
            "tags_all": {
              "Name": "eks-demo-nat-2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:194722428485:internet-gateway/igw-014106d03dcdfbc85",
            "id": "igw-014106d03dcdfbc85",
            "owner_id": "194722428485",
            "tags": {
              "Name": "eks-demo-igw"
            },
            "tags_all": {
              "Name": "eks-demo-igw"
            },
            "vpc_id": "vpc-02c626c31d5e03b6c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03340e361ad9ec910",
            "association_id": "eipassoc-06860df8e5f456a34",
            "connectivity_type": "public",
            "id": "nat-0e00c7ea60f93aceb",
            "network_interface_id": "eni-0429507db8c545ff6",
            "private_ip": "10.0.101.10",
            "public_ip": "54.218.86.115",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e05532d7b7a81c5d",
            "tags": {
              "Name": "eks-demo-nat-1"
            },
            "tags_all": {
              "Name": "eks-demo-nat-1"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-077fef23333884464",
            "association_id": "eipassoc-03664e4de77e17c14",
            "connectivity_type": "public",
            "id": "nat-08ee1fb4b52cc5f87",
            "network_interface_id": "eni-0532608416cb6ec66",
            "private_ip": "10.0.102.115",
            "public_ip": "54.185.43.93",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09135162cdd20ae51",
            "tags": {
              "Name": "eks-demo-nat-2"
            },
            "tags_all": {
              "Name": "eks-demo-nat-2"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:194722428485:route-table/rtb-0c5ac72e2b1fe7620",
            "id": "rtb-0c5ac72e2b1fe7620",
            "owner_id": "194722428485",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e00c7ea60f93aceb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-demo-private-1"
            },
            "tags_all": {
              "Name": "eks-demo-private-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-02c626c31d5e03b6c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:194722428485:route-table/rtb-0ebcff93491990626",
            "id": "rtb-0ebcff93491990626",
            "owner_id": "194722428485",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08ee1fb4b52cc5f87",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-demo-private-2"
            },
            "tags_all": {
              "Name": "eks-demo-private-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-02c626c31d5e03b6c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:194722428485:route-table/rtb-0437c68432da9fff4",
            "id": "rtb-0437c68432da9fff4",
            "owner_id": "194722428485",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-014106d03dcdfbc85",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-demo-public"
            },
            "tags_all": {
              "Name": "eks-demo-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-02c626c31d5e03b6c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b911d8163464cf4",
            "route_table_id": "rtb-0c5ac72e2b1fe7620",
            "subnet_id": "subnet-086c42ae5d1bdbc0b"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca6efab35449c6ba",
            "route_table_id": "rtb-0ebcff93491990626",
            "subnet_id": "subnet-03c9b620556227e4a"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b78a6d03a3ccc3a9",
            "route_table_id": "rtb-0437c68432da9fff4",
            "subnet_id": "subnet-0e05532d7b7a81c5d"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07bdcd37b0275e5c5",
            "route_table_id": "rtb-0437c68432da9fff4",
            "subnet_id": "subnet-09135162cdd20ae51"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:194722428485:subnet/subnet-086c42ae5d1bdbc0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-086c42ae5d1bdbc0b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "194722428485",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-demo-private-1",
              "kubernetes.io/cluster/eks-demo": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "eks-demo-private-1",
              "kubernetes.io/cluster/eks-demo": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-02c626c31d5e03b6c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:194722428485:subnet/subnet-03c9b620556227e4a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03c9b620556227e4a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "194722428485",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-demo-private-2",
              "kubernetes.io/cluster/eks-demo": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "eks-demo-private-2",
              "kubernetes.io/cluster/eks-demo": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-02c626c31d5e03b6c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:194722428485:subnet/subnet-0e05532d7b7a81c5d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e05532d7b7a81c5d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "194722428485",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-demo-public-1",
              "kubernetes.io/cluster/eks-demo": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks-demo-public-1",
              "kubernetes.io/cluster/eks-demo": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02c626c31d5e03b6c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:194722428485:subnet/subnet-09135162cdd20ae51",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09135162cdd20ae51",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "194722428485",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-demo-public-2",
              "kubernetes.io/cluster/eks-demo": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks-demo-public-2",
              "kubernetes.io/cluster/eks-demo": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02c626c31d5e03b6c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:194722428485:vpc/vpc-02c626c31d5e03b6c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cd839ed31178ea6b",
            "default_route_table_id": "rtb-01512661eaeff9998",
            "default_security_group_id": "sg-0873db36be55a03b8",
            "dhcp_options_id": "dopt-07430b710da03431f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02c626c31d5e03b6c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01512661eaeff9998",
            "owner_id": "194722428485",
            "tags": {
              "Name": "eks-demo-vpc",
              "kubernetes.io/cluster/eks-demo": "shared"
            },
            "tags_all": {
              "Name": "eks-demo-vpc",
              "kubernetes.io/cluster/eks-demo": "shared"
            }
          }
        }
      ]
    }
  ]
}